商品取得用エンドポイントを修正
